--- a/catalog-service/k8s/deployment.yml
+++ b/catalog-service/k8s/deployment.yml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: catalog-service
-          image: catalog-service
+          image: ghcr.io/cloudcomputing-ws23/catalog-service
           imagePullPolicy: IfNotPresent
           lifecycle:
             preStop:
