--- a/config-service/k8s/deployment.yml
+++ b/config-service/k8s/deployment.yml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: config-service
-          image: config-service
+          image: ghcr.io/cloudcomputing-ws23/config-service
           imagePullPolicy: IfNotPresent
           lifecycle:
             preStop:
