--- a/order-service/k8s/deployment.yml
+++ b/order-service/k8s/deployment.yml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: order-service
-          image: order-service
+          image: ghcr.io/cloudcomputing-ws23/order-service
           imagePullPolicy: IfNotPresent
           lifecycle:
             preStop:
