--- a/edge-service/build.gradle
+++ b/edge-service/build.gradle
@@ -27,11 +27,11 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	implementation 'org.springframework.session:spring-session-data-redis'
-	implementation 'io.opentelemetry:opentelemetry-exporter-otlp:1.34.1'
 
 	runtimeOnly 'io.github.resilience4j:resilience4j-micrometer'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 	runtimeOnly "io.opentelemetry.javaagent:opentelemetry-javaagent:${otelVersion}"
+	runtimeOnly 'io.opentelemetry:opentelemetry-exporter-otlp:${otelVersion}'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
