--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -34,10 +34,10 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
 	implementation 'org.springframework.retry:spring-retry'
-	implementation 'io.opentelemetry:opentelemetry-exporter-otlp:1.34.1'
 
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 	runtimeOnly "io.opentelemetry.javaagent:opentelemetry-javaagent:${otelVersion}"
+	runtimeOnly 'io.opentelemetry:opentelemetry-exporter-otlp:${otelVersion}'
 	runtimeOnly 'org.flywaydb:flyway-core'
 	runtimeOnly 'org.postgresql:postgresql'
 	runtimeOnly 'org.postgresql:r2dbc-postgresql'
