traces sent to jaeger

--- a/dispatcher-service/k8s/deployment.yml
+++ b/dispatcher-service/k8s/deployment.yml
@@ -13,10 +13,6 @@ spec:
     metadata:
       labels:
         app: dispatcher-service
-      annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/path: /actuator/prometheus
-        prometheus.io/port: "9003"
     spec:
       containers:
         - name: dispatcher-service
@@ -33,6 +29,12 @@ spec:
               value: http://config-service
             - name: SPRING_RABBITMQ_HOST
               value: bookshop-rabbitmq
+            - name: OTEL_EXPORTER_OTLP_ENDPOINT
+              value: http://simplest-collector:4317
+            - name: OTEL_METRICS_EXPORTER
+              value: none
+            - name: JAVA_TOOL_OPTIONS
+              value: -javaagent:/workspace/BOOT-INF/lib/opentelemetry-javaagent-1.32.0.jar
           livenessProbe:
             httpGet:
               path: /actuator/health/liveness
