--- a/edge-service/k8s/deployment.yml
+++ b/edge-service/k8s/deployment.yml
@@ -13,10 +13,6 @@ spec:
     metadata:
       labels:
         app: edge-service
-      annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/path: /actuator/prometheus
-        prometheus.io/port: "9000"
     spec:
       containers:
         - name: edge-service
@@ -37,6 +33,12 @@ spec:
               value: http://config-service
             - name: SPRING_REDIS_HOST
               value: bookshop-redis
+            - name: OTEL_EXPORTER_OTLP_ENDPOINT
+              value: http://simplest-collector:4317
+            - name: OTEL_METRICS_EXPORTER
+              value: none
+            - name: JAVA_TOOL_OPTIONS
+              value: -javaagent:/workspace/BOOT-INF/lib/opentelemetry-javaagent-1.32.0.jar
           livenessProbe:
             httpGet:
               path: /actuator/health/liveness
