--- a/bookshop-deployment/docker/docker-compose.yml
+++ b/bookshop-deployment/docker/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     depends_on:
       - fluent-bit
       - bookshop-postgres
+      - otel-collector
       - tempo
     image: "catalog-service"
     container_name: "catalog-service"
@@ -21,7 +22,8 @@ services:
       - BPL_DEBUG_PORT=8001
       - JAVA_TOOL_OPTIONS=-javaagent:/workspace/BOOT-INF/lib/opentelemetry-javaagent-1.32.0.jar
       - OTEL_SERVICE_NAME=catalog-service
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://tempo:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
+      - OTEL_TRACES_EXPORTER=jaeger
       - OTEL_METRICS_EXPORTER=none
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
       - SPRING_DATASOURCE_URL=jdbc:postgresql://bookshop-postgres:5432/db_catalog
@@ -47,7 +49,8 @@ services:
       - BPL_DEBUG_PORT=8002
       - JAVA_TOOL_OPTIONS=-javaagent:/workspace/BOOT-INF/lib/opentelemetry-javaagent-1.32.0.jar
       - OTEL_SERVICE_NAME=order-service
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://tempo:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
+      - OTEL_TRACES_EXPORTER=jaeger
       - OTEL_METRICS_EXPORTER=none
       - BOOKSHOP_CATALOG_SERVICE_URI=http://catalog-service:9001
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
@@ -74,7 +77,8 @@ services:
       - BPL_DEBUG_PORT=8003
       - JAVA_TOOL_OPTIONS=-javaagent:/workspace/BOOT-INF/lib/opentelemetry-javaagent-1.32.0.jar
       - OTEL_SERVICE_NAME=dispatcher-service
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://tempo:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
+      - OTEL_TRACES_EXPORTER=jaeger
       - OTEL_METRICS_EXPORTER=none
       - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
       - SPRING_RABBITMQ_HOST=bookshop-rabbitmq
@@ -98,7 +102,8 @@ services:
       - BPL_DEBUG_PORT=8000
       - JAVA_TOOL_OPTIONS=-javaagent:/workspace/BOOT-INF/lib/opentelemetry-javaagent-1.32.0.jar
       - OTEL_SERVICE_NAME=edge-service
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://tempo:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
+      - OTEL_TRACES_EXPORTER=jaeger
       - OTEL_METRICS_EXPORTER=none
       - CATALOG_SERVICE_URL=http://catalog-service:9001
       - ORDER_SERVICE_URL=http://order-service:9002
@@ -125,7 +130,8 @@ services:
       - BPL_DEBUG_PORT=9888
       - JAVA_TOOL_OPTIONS=-javaagent:/workspace/BOOT-INF/lib/opentelemetry-javaagent-1.32.0.jar
       - OTEL_SERVICE_NAME=config-service
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://tempo:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4318
+      - OTEL_TRACES_EXPORTER=jaeger
       - OTEL_METRICS_EXPORTER=none
     logging:
       driver: fluentd
@@ -162,6 +168,38 @@ services:
 
   # Observability
 
+  otel-collector:
+    image: otel/opentelemetry-collector-contrib:latest
+    depends_on:
+      - jaeger
+    command: [ "--config=/etc/otel-collector-config.yml", "" ]
+    volumes:
+      - ./observability/jaeger/otel-collector-config.yml:/etc/otel-collector-config.yml
+    ports:
+      - "1888:1888"   # pprof extension
+      - "8888:8888"   # Prometheus' metrics exposed by the collector
+      - "8889:8889"   # Prometheus exporter metrics
+      - "13133:13133" # health_check extension
+      - "55679:55679" # zpages extension
+      - "4317:4317"   # otlp receiver
+
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    container_name: jaeger
+    ports:
+      - "16686:16686"   # The Jaeger UI
+      - "4317:4317"     # OTel collector grpc
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+
+  prometheus:
+    image: quay.io/prometheus/prometheus:v2.48.0
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./observability/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+
   grafana:
     image: grafana/grafana-oss:10.2.2
     container_name: grafana
@@ -196,14 +234,6 @@ services:
       - LOKI_URL=http://loki:3100/loki/api/v1/push
     volumes:
       - ./observability/fluent-bit/fluent-bit.conf:/fluent-bit/etc/fluent-bit.conf
-
-  prometheus:
-    image: quay.io/prometheus/prometheus:v2.48.0
-    container_name: prometheus
-    ports:
-      - "9090:9090"
-    volumes:
-      - ./observability/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
 
   tempo:
     image: grafana/tempo:2.3.1
