--- a/bookshop-deployment/docker/observability/prometheus/prometheus.yml
+++ b/bookshop-deployment/docker/observability/prometheus/prometheus.yml
@@ -27,4 +27,9 @@ scrape_configs:
     metrics_path: '/actuator/prometheus'
     static_configs:
       - targets: [ 'config-service:8888' ]
+  - job_name: 'otel-collector'
+    scrape_interval: 2s
+    static_configs:
+      - targets: [ 'otel-collector:8889' ]
+      - targets: [ 'otel-collector:8888' ]
   
