--- a/order-service/k8s/deployment.yml
+++ b/order-service/k8s/deployment.yml
@@ -13,10 +13,6 @@ spec:
     metadata:
       labels:
         app: order-service
-      annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/path: /actuator/prometheus
-        prometheus.io/port: "9002"
     spec:
       containers:
         - name: order-service
@@ -39,6 +35,14 @@ spec:
               value: r2dbc:postgresql://bookshop-postgres/db_order
             - name: SPRING_FLYWAY_URL
               value: jdbc:postgresql://bookshop-postgres/db_order
+            - name: JAVA_TOOL_OPTIONS
+              value: -javaagent:/workspace/BOOT-INF/lib/opentelemetry-javaagent-1.32.0.jar
+            - name: OTEL_EXPORTER_OTLP_ENDPOINT
+              value: http://otel-collector:4317
+            - name: OTEL_TRACES_EXPORTER
+              value: jaeger
+            - name: OTEL_METRICS_EXPORTER
+              value: none
           livenessProbe:
             httpGet:
               path: /actuator/health/liveness
