--- a/bookshop-deployment/kubernetes/platform/development/services/jaeger.yml
+++ b/bookshop-deployment/kubernetes/platform/development/services/jaeger.yml
@@ -1,3 +1,5 @@
+# Modifications copyright (C) 2024 Daniel Etzinger, Andreas Leeb, Bahara Muradi, Daniel Wimmer
+
 apiVersion: jaegertracing.io/v1
 kind: Jaeger
 metadata:
