--- a/bookshop-deployment/kubernetes/platform/production/services/opensearch-cluster.yaml
+++ b/bookshop-deployment/kubernetes/platform/production/services/opensearch-cluster.yaml
@@ -1,3 +1,5 @@
+# Modifications copyright (C) 2024 Daniel Etzinger, Andreas Leeb, Bahara Muradi, Daniel Wimmer
+
 apiVersion: opensearch.opster.io/v1
 kind: OpenSearchCluster
 metadata:
