--- a/config-service/build.gradle
+++ b/config-service/build.gradle
@@ -1,3 +1,5 @@
+/* Modifications copyright (C) 2024 Daniel Etzinger, Andreas Leeb, Bahara Muradi, Daniel Wimmer */
+
 plugins {
 	id 'org.springframework.boot' version '2.7.18'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
