--- a/edge-service/k8s/deployment.yml
+++ b/edge-service/k8s/deployment.yml
@@ -1,3 +1,5 @@
+# Modifications copyright (C) 2024 Daniel Etzinger, Andreas Leeb, Bahara Muradi, Daniel Wimmer
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
